test/parsetest/invalid/empty_if_cond.java
class Invalid5 {

	public static void main(String[] args) {
		if () { }
	}

}
